--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
-    "request-ip": "^3.3.0"
+    "request-ip": "^3.3.0",
+    "vercel": "^37.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
