--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.13",
+    "node-ipinfo": "^3.5.3",
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
