--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
+    "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "crypto": "^1.0.1",
@@ -17,10 +18,12 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "node-ipinfo": "^3.5.3",
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "request-ip": "^3.3.0",
     "vercel": "^37.6.0"
   },
@@ -35,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
