--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "framer-motion": "^11.11.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
@@ -25,7 +29,9 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "request-ip": "^3.3.0",
-    "vercel": "^37.6.0"
+    "tailwind-merge": "^2.5.3",
+    "vercel": "^37.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
